AG-11897 Fix toolbar alignment to series rect

--- a/packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
+++ b/packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-wrap: nowrap;
     opacity: 1;
-    padding: 0 var(--ag-charts-toolbar-padding);
     position: absolute;
     transform: translateY(0);
     transition:
@@ -36,7 +35,6 @@
 .ag-charts-toolbar--left,
 .ag-charts-toolbar--right {
     flex-direction: column;
-    padding: var(--ag-charts-toolbar-padding) 0;
 }
 
 .ag-charts-toolbar--floating,
